# ecommerce_api_python_rust

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  ruff.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml  sync.toml
.aws-sam/auto-dependency-layer/: adl_nested_template.yaml  template.yaml
.aws-sam/auto-dependency-layer/OrderLambdaFunction/: order.py
.aws-sam/auto-dependency-layer/OrderLambdaFunctionf3756e44DepLayer/: AWS_SAM_CLI_README
.aws-sam/auto-dependency-layer/ProcessCartProductsFunction/: order.py  product.py
.aws-sam/auto-dependency-layer/ProcessCartProductsFunction5c56808eDepLayer/: AWS_SAM_CLI_README
.aws-sam/auto-dependency-layer/ProcessCartProductsFunction5c56808eDepLayer/python/aws_lambda_powertools-2.17.0.dist-info/: METADATA
.aws-sam/auto-dependency-layer/ProcessCartProductsFunction5c56808eDepLayer/python/aws_lambda_powertools/logging/: logger.py
.aws-sam/auto-dependency-layer/ProductLambdaFunction/: app.py  product.py  send_sqs.py
.aws-sam/auto-dependency-layer/ProductLambdaFunction5ee6b3f5DepLayer/: AWS_SAM_CLI_README
.aws-sam/auto-dependency-layer/ProductLambdaFunction5ee6b3f5DepLayer/python/botocore-1.29.159.dist-info/: RECORD
.aws-sam/auto-dependency-layer/UpdateCartProductsFunction/: order.py  product.py  product_list.json
.aws-sam/auto-dependency-layer/UpdateCartProductsFunction2d6aef2dDepLayer/: AWS_SAM_CLI_README
.aws-sam/auto-dependency-layer/UpdateCartProductsFunction2d6aef2dDepLayer/python/boto3-1.26.159.dist-info/: RECORD
py_project/: main.py  order.py  product.py
src/: lib.rs  model.rs  order.py  process_cart_products.py  product.py  product_list.json  requirements.txt  update_cart_products.py
tests/unit/: test_handler.py
