[package]
name = "ecommerce_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
aws-smithy-client = { version = "0.52.0", features = ["test-util"] }
aws-smithy-types = {version="1.1.3"}
lambda_http = {version="0.8.3", optional = true}
tokio = { version = "1.21.1", features = ["full"] }
svix-ksuid = "^0.6.0"
lambda_runtime = { version = "0.8.3", optional = true}
rayon = { version = "1.8.1", optional = true }
serde = "1.0.136"
aws_lambda_events = { version = "0.8.3",optional = true,features = ["dynamodb","sqs"]}
typed-builder = "0.18.0"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
aws-sdk-sqs = {version="1.9.0",optional=true}


[dev-dependencies]
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
http = "0.2.8"

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http","aws_lambda_events","aws-sdk-sqs", "rayon"]

[[bin]]
name = "process-cart-products"
path ="src/bin/lambda/process-cart-products.rs"
test = false

[[bin]]
name = "update-cart-status"
path ="src/bin/lambda/update-cart-status.rs"
test = false
