[package]
name = "ecommerce_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
tokio = { version = "1.21.1", features = ["full"] }

lambda_runtime = { version = "0.8.3", optional = true}
rayon = { version = "1.8.1", optional = true }
serde = "1.0.136"
serde_dynamo = "4.2.7"
aws_lambda_events = { version = "0.8.3",optional = true,features = ["dynamodb","sqs"]}

serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
aws-sdk-sqs = {version="1.9.0",optional=true}


[dev-dependencies]
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
http = "0.2.8"

[features]
default = ["lambda"]
lambda = ["lambda_runtime","aws_lambda_events","aws-sdk-sqs", "rayon"]

[[bin]]
name = "process-cart-products"
path ="src/bin/lambda/process-cart-products.rs"
test = false

[[bin]]
name = "update-cart-status"
path ="src/bin/lambda/update-cart-status.rs"
test = false
